Re-factors config + replace PostCSS with Less (for now)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsg-button",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Get-Set-Go button component",
   "main": "dist/index.min.js",
   "scripts": {
@@ -11,10 +11,11 @@
     "bundle:eg": "npm run eg:clean && webpack --config \"./examples/webpack.config.js\" --progress -p -d --watch",
     "build": "npm run dist:clean && cross-env NODE_ENV=production webpack --progress -p -d",
     "build:eg": "npm run eg:clean && cross-env NODE_ENV=production webpack --config \"./examples/webpack.config.js\" --progress -p -d",
+    "build:prod": "npm run build && npm run build:eg",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "test": "jest",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build:prod"
   },
   "repository": {
     "type": "git",
@@ -56,9 +57,6 @@
     "jest": "^17.0.3",
     "jest-cli": "^17.0.3",
     "json-loader": "^0.5.4",
-    "postcss-cli": "^2.6.0",
-    "postcss-loader": "^1.1.1",
-    "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
