--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsg-button",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Get-Set-Go button component",
   "main": "dist/index.min.js",
   "scripts": {
@@ -36,7 +36,8 @@
     "classnames": "^2.2.5",
     "object-assign": "^4.1.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "gsg-common-style": "https://github.com/get-set-go/gsg-common-style.git"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
