--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsg-button",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Get-Set-Go button component",
   "main": "dist/index.min.js",
   "scripts": {
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/get-set-go/gsg-button#readme",
   "dependencies": {
+    "babel-runtime": "^6.20.0",
     "classnames": "^2.2.5",
     "object-assign": "^4.1.0",
     "react": "^15.4.1",
@@ -49,6 +50,7 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.8",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
